src/app.css
@import './main.css';

/* Main Wrapper */
.app {
    background-color: #fff;
    height: 100vh;
    overflow: auto;
    margin: -16px;
}

/* Content (minus trait drawer - note padding */
.content {
    padding-left: 280px;
    margin-bottom: 40px;
    width: 100%;
    height: calc(100% - 42px);
    overflow: auto;
}

.footer {
    bottom: 0;
    left: 280px;
    width: calc(100% - 280px);
    padding: 8px;
    background-color: #fff;
    z-index: 1;
    border-top: 1px solid #aaa;
}
.nav-button-container {
    width: 100%;
}
.nav-button-container button {
    margin-right: 8px;
}

/* Container for query/count display */
.top-area {
    height: 250px;
    margin: 8px;
    padding-bottom: 12px;
    border-bottom: 1px solid #ccc;
}

/* Force label/inputs full-width */
.query-column label, .query-column input {
    display: block;
    width: 100%;
}
.query-column label{
    font-weight: 700;
}

/* Container for Query label/indicator */
.query-header {
    margin-top: 10px;
}
.query-header svg {
    fill: var(--error-color);
    height: 20px;
}

/* Human readable query container */
.query-box {
    height: 120px;
    overflow: auto;
    background-color: var(--primary-light-color);
    white-space: pre;
    font-size: 10px;
    padding: 6px;
}
.query-box.invalid {
    border-color: var(--error-color);
}

/* Column for HH counts */
.counts-column {
    max-width: 300px;
}

/* HH Counts container */
.count-box {
    height: 220px;
    background-color: var(--primary-light-color);
    font-size: 10px;
    padding: 6px;
    border-radius: 8px;
    margin-left: 8px;
}
.count-container {
    height: 100%;
    word-break: normal;
    overflow-wrap: anywhere;
    overflow: auto;
}

/* Counts Header */
.counts-header {
    width: 100%;
    font-size: 14px;
    font-weight: 700;
    line-height: 20px;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 6px;
}
.counts-header svg {
    height: 20px;
    margin-top: -3px;
}

/* Center non-HH count text */
.counts-disabled-area {
    text-align: center;
}

/* Count Label/Values */
.count-label {
    font-weight: 700;
    color: #7a267b
}
.count-value {
    padding-left: 4px;
    float: right;
    clear: both;
}

/* Run Counts Button */
.count-button {
    width: 100%;
    text-align: center;
}

